<resources>
    <string name="app_name">TicTacToe</string>
    <string name="heading">Welcome to Tic-Tac-Toe</string>
    <string name="grid">Our main grid</string>
    <string name="status">X\'s Turn Tap-to-play</string>
    <string name="column0">column0</string>
    <string name="column1">columns1</string>
    <string name="column2">columns2</string>
    <string name="column3">columns3</string>
    <string name="column4">columns4</string>
    <string name="column5">columns5</string>
    <string name="column6">columns6</string>
    <string name="column7">columns7</string>
    <string name="column8">columns8</string>
</resources>